deploynats/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nats
  name: nats
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "natssvc.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nats
            port:
              number: 8222
